--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -15,7 +15,7 @@ openshift_cluster_content:
 - object: Builds
   content:
   - name: tool-box
-    template: "https://raw.githubusercontent.com/redhat-cop/containers-quickstarts/v1.4/build-docker-generic/.openshift/templates/docker-build-template.yml"
+    template: "docker-build-template.yml"
     params_from_vars:
       NAME: "{{ app_name }}"
       SOURCE_REPOSITORY_URL: https://github.com/redhat-cop/containers-quickstarts.git
