--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -18,7 +18,7 @@ openshift_cluster_content:
 - object: Builds
   content:
   - name: tool-box
-    template: "docker-build-template.yml"
+    template: "{{ inventory_dir }}/../../docker-build-template.yml"
     params_from_vars:
       NAME: "{{ app_name }}"
       SOURCE_REPOSITORY_URL: "{{ source_repository_url }}"
