--- a/tool-box/docker-build-template.yml
+++ b/tool-box/docker-build-template.yml
@@ -39,11 +39,7 @@ objects:
     strategy:
       type: Docker
       dockerStrategy:
-        env:
-          - name: "OC_CLIENT_MIRROR"
-            value: "{{ "https://mirror.openshift.com/pub/openshift-v3/clients/3.11.127/linux/oc.tar.gz" if ( "$%.1f"|format(OCP_VERSION) < 4.1 ) else "https://mirror.openshift.com/pub/openshift-v4/clients/oc/" ~ OCP_VERSION ~ "/linux/oc.tar.gz" }}"
-          - name: "TOOLBOX_ANSIBLE_VERSION"
-            value: "{"3": "2.8", "4": "2.9"}[OCP_VERSION | int | string] | default("3")"
+        env: "{ OC_CLIENT_MIRROR: "{{ "https://mirror.openshift.com/pub/openshift-v3/clients/3.11.127/linux/oc.tar.gz" if ( "$%.1f"|format(OCP_VERSION) < 4.1 ) else "https://mirror.openshift.com/pub/openshift-v4/clients/oc/" ~ OCP_VERSION ~ "/linux/oc.tar.gz" }}", TOOLBOX_ANSIBLE_VERSION: "{"3": "2.8", "4": "2.9"}[OCP_VERSION | int | string] | default("3")" }"
     triggers:
     - type: GitHub
       github:
