--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -1,8 +1,9 @@
-namespace: tool-box
-app_name: toolbox
-source_repository_url:
-source_repository_ref:
-ocp_version:
+---
+- namespace: "tool-box"
+- app_name: "toolbox"
+- source_repository_url:
+- source_repository_ref:
+- ocp_version:
 
 openshift_cluster_content:
 - object: Environment Setup
