--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -5,7 +5,8 @@
 - source_repository_ref:
 - ocp_version:
 
-openshift_cluster_content:
+- openshift_cluster_content:
+
 - object: Environment Setup
   content:
   - name: Create Projects
