Revert "Changed openshift_cluster_content: to a list in seed-hosts"
This reverts commit 022d7c9ebc710c39c61260141bafbc891e905970.

--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -5,8 +5,7 @@
 - source_repository_ref:
 - ocp_version:
 
-- openshift_cluster_content:
-
+openshift_cluster_content:
 - object: Environment Setup
   content:
   - name: Create Projects
