Revert "Changed variable definitions in seed-hosts to lists"
This reverts commit 19dfe0a15bfadcb1e9f7fe75cb9b243974871802.

--- a/tool-box/.applier/group_vars/seed-hosts.yml
+++ b/tool-box/.applier/group_vars/seed-hosts.yml
@@ -1,9 +1,8 @@
----
-- namespace: "tool-box"
-- app_name: "toolbox"
-- source_repository_url:
-- source_repository_ref:
-- ocp_version:
+namespace: tool-box
+app_name: toolbox
+source_repository_url:
+source_repository_ref:
+ocp_version:
 
 openshift_cluster_content:
 - object: Environment Setup
